[EFL][Qt][WK2] Tiles not always painted https://bugs.webkit.org/show_bug.cgi?id=103271

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-11-27
Reviewed by Kenneth Rohde Christiansen.

The problem turned up because visible content was synchromized before the new fixed
layout size had been applied in the web process.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didChangeViewportSize):
(WebKit::PageViewportController::didChangeViewportAttributes):

Canonical link: https://commits.webkit.org/121511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135864 268f45cc-cd09-0410-ab3c-d52691b4dbfc